--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
-@import './config';
-@import './buttons';
-@import './utilities';
+@import 'config';
+@import 'buttons';
+@import 'utilities';
+@import 'landing';
 
 * {
   box-sizing: border-box;
