Thursday afternoon push

--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -5,22 +5,16 @@
   align-items: center;
   text-align: center;
   z-index: 1;
+  background-color: transparent;
   
-  .header {
-    background-color: none;
-    
-    img {
-      width: 20%;
+  &.header {
+    background-color: transparent;    
+  }
+  
+  .logo {
+    width: 25vw;
     }
-  }
-
-  .container {
-    max-width: 1070px;
-    padding: 0 30px;
-    margin: 0 auto;
-    z-index: 0;
-  }
-  
+    
   .diamond-big {
     width: 25%;
     // height: 25%;
@@ -32,24 +26,23 @@
     width: 15%;
     height: 0px;
     padding-bottom: 15%;
-    background-color: rgba(255, 211, 51, 0.4);
+    background-color: rgba(228, 87, 46, 0.4);
     display: inline-block;
   }
   .diamond-sm {
     width: 20%;
     padding-bottom: 20%;
-    background-color: rgba(228, 87, 46, 0.4);
+    background-color: rgba(255, 211, 51, 0.4);
     display: inline-block;
   }
   .grid {
-    position: relative;
-    padding-bottom: 100%;
+   position: relative;
     transform: rotate(45deg);
-    transform-origin: 99%;
-  }
-  .grid-section {
-    // overflow: hidden;
-    padding-bottom: 200px;
+    transform-origin: 100%;
+    padding-bottom: 30%;
+    top: 190px;
+    left: 270px;
+    z-index: -1;
   }
   #diamond1 {
     position: absolute;
@@ -59,12 +52,11 @@
   }
   #diamond2 {
     position: absolute;
-    top: 4%;
+    top: -46.5%;
     left: 15%;
   }
   #diamond3 {
     position: absolute;
-    top: 10%;
     left: 37.5%;
   }
 }
