--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -1,14 +1,17 @@
 .landing {
   height: 100%;
-  padding-top: 3vh;
+  padding-top: 0 auto;
   overflow: hidden;
   align-items: center;
   text-align: center;
   z-index: 1;
-  background-color: transparent;
+  background-color: white;
   
-  &.header {
+  .header {
     background-color: transparent;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .logo {
@@ -39,7 +42,7 @@
    position: relative;
     transform: rotate(45deg);
     transform-origin: 100%;
-    padding-bottom: 30%;
+    padding-bottom: 0%;
     top: 190px;
     left: 270px;
     z-index: -1;
