basic nav and comp styling done

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -8,6 +8,8 @@ $orange-color: #E4572E;
 $light-blue-color: #D7FDEC;
 $yellow-color: #FFD333;
 $grey-color: #605F5E;
+$light-grey-color: #605f5e9d;
+$light-yellow-color: #ffd3338a;
 
 //Set text color based on background
 @function set-text-color($color) {
