--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,29 @@
   position: relative;
   width: 70%;
   margin: 0 auto;
-  height: auto;
-  max-height: 70vh;
-  margin-top: calc(100vh - 85vh - 20px);
+  height: 80vh;
+  /* max-height: 70vh; */
+  margin-top: 10px;
   background: #fff;
   border-radius: 4px;
-  padding: 20px;
+  padding: 15px;
   border: 1px solid #999;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  background: 
+    linear-gradient(
+      to bottom,
+      #D7FDEC,
+      #e6e096
+    );
 }
 .close-icon{
   content: 'x';
   cursor: pointer;
   position: fixed;
-  right: calc(15% - 30px);
-  top: calc(100vh - 85vh - 33px);
+  right: calc(15% - 10px);
+  top: calc(100vh - 85vh - 110px);
   background: #ededed;
   width: 25px;
   height: 25px;
