--- a/src/scss/_dash_comp.scss
+++ b/src/scss/_dash_comp.scss
@@ -1,20 +1,90 @@
 .page {
     background-color: $light-grey-color;
-    min-width: 100vw;
-    margin-left: 200px;
-    padding-left: 15px;
+    position: sticky;
+    right: 0;
+    min-width: 83%;
+    margin-left: 210px;
+    // margin-right: 200px;
+    // padding-left: 15px;
+    // padding-right: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
     h1 {
-        color: $orange-color;
+        color: $blue-color;
         font-size: 36pt;
     }
 
+    .title-container{
+        background-color: $light-color;
+        padding: 10px 0px 10px 0px;
+        min-width: 70%;
+        margin: 10px;
+        border-radius: 4px;
+        border: 3px solid $orange-color;
+        display: flex;
+        justify-content: center;
+        
+    }
+    .secondary-container {
+            width:100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            padding: 0;
+        }
     h2 {
         color: $blue-color;
     }
-
+    
     .row {
+        width: 90%;
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 40px;
+        padding-right: 40px;
         flex-direction: row;
+        border-top: 1px solid $blue-color;
+        min-height: 30px;
+        .list-item {
+            width: 150px;
+            text-align: left;
+    }
+    }
+    
+    // .row:hover{
+        //     background-color: $light-yellow-color;
+        //     padding-top: 5px;
+        //     padding-bottom: 5px;
+        // }
+        
+        .sub-page {
+            min-width: 83%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .row {
+                width: 70%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding-left: 40px;
+                padding-right: 40px;
+                flex-direction: row;
+                border-top: 1px solid $blue-color;
+                min-height: 30px;
+                .list-title{
+                    font-size: 15px;
+                    font-weight: bold;
+                    color: $yellow-color;
+                }
+                .list-item {
+                    width: 150px;
+                    text-align: left;
+            }
+        }
     }
 }
