landing page final

--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -3,12 +3,13 @@
 .landing {
   height: 100vh;
   width: 100vw;
-  padding-top: 0 auto;
+  padding-top: 0;
   overflow: hidden;
   align-items: center;
   text-align: center;
   z-index: 1;
   background-color: white;
+  // margin-bottom: 40px;
   
   .header {
     background-color: transparent;    
@@ -17,7 +18,7 @@
   }
   
   .logo {
-    width: 25vw;
+    width: 20vw;
     }
     
   .landing-page-adjust{
@@ -75,6 +76,7 @@
 
   .rental-row {
     display: flex;
+    width: 100%;
     padding: 0px 30px;
 
     .rental-container {
