--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@
 }
 .box{
   position: relative;
-  width: 70%;
+  width: 50vw;
   margin: 0 auto;
   height: 80vh;
   /* max-height: 70vh; */
   margin-top: 10px;
   background: #fff;
   border-radius: 4px;
-  padding: 15px;
+  padding: 15px 35px;
   border: 1px solid #999;
   overflow: auto;
   display: flex;
@@ -28,15 +28,15 @@
     linear-gradient(
       to bottom,
       #D7FDEC,
-      #e6e096
+      #dcd8ae
     );
 }
 .close-icon{
   content: 'x';
   cursor: pointer;
   position: fixed;
-  right: calc(15% - 10px);
-  top: calc(100vh - 85vh - 110px);
+  right: calc(24%);
+  top: calc(1%);
   background: #ededed;
   width: 25px;
   height: 25px;
