--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -1,10 +1,15 @@
-.popup-header {
+@import './config.scss';
 
-  
+.popup-header {
+  h2 {
+    font-size: 2rem;
+    color: $grey-color;
+  }
+
 }
 
 .member-login {
-  padding: 5px 0 5px 0;
+  padding: 5px 0 35px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,9 +45,10 @@
 
   h2 {
     padding-top: 10px;
+    color: $grey-color;
   }
 
   p {
-    padding: 0 20px;
+    padding: 0 25px;
   }
 }
