--- a/src/scss/_dash_comp.scss
+++ b/src/scss/_dash_comp.scss
@@ -39,7 +39,7 @@
     }
     
     .row {
-        width: 90%;
+        min-width: 700px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -67,24 +67,34 @@
             justify-content: center;
             align-items: center;
             .row {
-                width: 70%;
+                width: 90%;
                 display: flex;
+                flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
                 padding-left: 40px;
                 padding-right: 40px;
-                flex-direction: row;
                 border-top: 1px solid $blue-color;
                 min-height: 30px;
+                margin-left: 0;
+                .list-item {
+                    min-width: 150px;
+                    text-align: left;
+                }
                 .list-title{
                     font-size: 15px;
                     font-weight: bold;
                     color: $yellow-color;
                 }
-                .list-item {
-                    width: 150px;
-                    text-align: left;
             }
-        }
+            .properties-titles {
+                padding-left: 108px;
+            }
+            .tenant-row {
+                width: 80vw;
+                .tenant-item{
+                    min-width: 180px;
+                }
+            }
     }
 }
