cleaned up scss file structure and basic landing header functionality

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -12,13 +12,13 @@ $light-grey-color: #605f5e9d;
 $light-yellow-color: #ffd3338a;
 
 //Set text color based on background
-@function set-text-color($color) {
-  @if(lightness($color) > 70) {
-    @return #333;
-  } @else {
-    @return #fff;
-  }
-}
+// @function set-text-color($color) {
+//   @if(lightness($color) > 70) {
+//     @return #333;
+//   } @else {
+//     @return #fff;
+//   }
+// }
 
 // Set background & text color
 @mixin set-background($color) {
