--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -290,14 +290,15 @@
 
     .rental-container {
       flex: 33.33%;
-      margin: 10px 10px;
-      padding: 10px 5px 0px 0px;
-      // overflow: hidden;
-      height: auto;
+      margin: 10px;
+      padding: 0px;
+      img{
+        border-radius: 9px;
+        box-shadow: 0px 0px 15px 5px $blue-color;
+      }
     }
     @media(max-width: 800px){
       flex-direction: column;
-      padding: 0px 10vw;
     }
   }
   
