--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -34,18 +34,22 @@
     height: 100vh;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .box{
     position: relative;
-    width: 50vw;
-    margin: 0 auto;
+    width: 750px;
+    max-width: 85vw;
     height: 80vh;
+    max-height: 415px;
     margin-top: 10px;
     background: #fff;
     border-radius: 4px;
-    padding: 15px 35px;
+    padding: 0px 35px;
     border: 1px solid #999;
-    overflow: auto;
+    overflow: visible;
     display: flex;
     flex-direction: column;
     background: 
@@ -54,21 +58,33 @@
         #D7FDEC,
         #dcd8ae
       );
+
+      @media(max-width: 600px){
+        max-height: 480px;
+      }
+
+      @media(max-width: 380px){
+        height: 90vh;
+        max-height: 460px;
+      }
   }
   .close-icon{
-    content: 'x';
+    content: 'X';
     cursor: pointer;
-    position: fixed;
-    right: calc(24%);
-    top: calc(1%);
+    position: absolute;
+    right: 0px;
+    top: 0px;
     background: #ededed;
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     line-height: 20px;
     text-align: center;
     border: 1px solid #999;
     font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
