--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -3,52 +3,145 @@
 .popup-header {
   h2 {
     font-size: 2rem;
-    color: $grey-color;
+    color: $orange-color;
+  }
+  @media(max-width:600px){
+    h2{
+      font-size: 1.5rem;
+    }
+  }
+  @media(max-width:380px){
+    h2{
+      font-size: 1.3rem;
+    }
   }
 
 }
 
 .member-login {
-  padding: 5px 0 35px 0;
+  padding: 10px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgba(128, 128, 128, 0.39);
+  border-radius: 8px;
   
-  input {
-    margin: 10px 0;
-    width: 200px;
-    padding: 5px;
+  h2 {
+    padding: 0 20px;
+    font-size: 1.1rem;
+    font-weight: 700;
+  }
+  .login-inputs{
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    input {
+      margin: 10px 0;
+      width: 200px;
+      padding: 5px;
+      display: flex;
+      flex-direction: row;
+    }
   }
 
-  p {
-    padding: 0 20px;
+  @media(max-width:600px){
+    .login-inputs{
+      flex-direction: column;
+      input{
+        margin: 5px 0px;
+      }
+    }
+  }
+
+  @media(max-width: 380px){
+    margin-left: -20px;
+    margin-right: -20px;
+    h2{
+      padding: 0px;
+    }
   }
   
 }
 
 .login-request {
-  padding-top: 65px 0 5px 0;
+  padding: 10px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  
-  input {
-    margin: 10px 0;
-    padding: 5px;
-    width: 200px;
-    display: flex;
-    flex-direction: row;
-  }
+  background-color: rgba(128, 128, 128, 0.39);
+  border-radius: 8px;
+  position: relative;
+  margin-top:20px;
+  margin-bottom: 20px;
 
   h2 {
-    padding-top: 10px;
-    color: $grey-color;
+    padding: 0 20px;
+    font-size: 1.1rem;
+    font-weight: 700;
   }
 
+  form{
+    width: 100%;
+    display: relative;
+    .columns-container{
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      margin: 0px;
+      .input-column{
+        input {
+          margin-bottom: 10px;
+          margin-right: 10px;
+          margin-left: 10px;
+          padding: 5px;
+          width: 200px;
+          display: flex;
+          flex-direction: row;
+        }
+      }
+    }
+  }
+   
+ 
   p {
     padding: 0 25px;
   }
+
+  @media(max-width:600px){
+
+    form{
+      .columns-container{
+        flex-direction: column;
+        align-items: center;
+        .input-column{
+          input{
+            margin-right: 5px;
+            margin-left: 5px;
+            margin-bottom: 5px;
+          }
+        }
+      }
+    }
+  }
+
+  @media(max-width:380px){
+    margin-left: -20px;
+    margin-right: -20px;
+  
+    form{
+      .columns-container{
+        flex-direction: column;
+        align-items: center;
+        .input-column{
+          input{
+            margin-bottom: 5px;
+          }
+        }
+      }
+    }
+  }
+
+
+
 }
